--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
   width: 370px;
   padding: 20px 10px;
   gap: 10px;
+  z-index: 2;
   background-color: #ffffff;
   border-radius: 30px;
   -webkit-box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.3);
@@ -308,6 +309,9 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 .buscador_vuelos .contenedor_input_s .contenedor_input {
   width: auto;
+}
+.buscador_vuelos .contenedor_input {
+  position: relative;
 }
 .buscador_vuelos .input {
   position: relative;
@@ -357,6 +361,11 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 .buscador_vuelos .buscador_vuelos_form .input_buscador {
   width: 328px;
+}
+.buscador_vuelos .btn_l {
+  width: 328px;
+  height: 45px;
+  background-color: #003b94;
 }
 
 .contenedor_input_vuelo {
@@ -494,7 +503,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
   gap: 10px;
   font-size: 20px;
   border: 3px solid #b3b3b3;
-  border-radius: 30px;
+  border-radius: 15px;
   color: #909090;
   background-color: #ffffff;
   -webkit-transition: all 0.5s;
@@ -570,6 +579,10 @@ input[type=date]::-webkit-calendar-picker-indicator {
   background-color: #f7f7f7;
 }
 
+.contenedor_input .input.input_buscador input {
+  border-radius: 30px;
+}
+
 .contenedor_input_s {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -581,8 +594,11 @@ input[type=date]::-webkit-calendar-picker-indicator {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
-  gap: 28px;
+  gap: 5px;
 }
 
 .contenedor_barra_nav {
@@ -1469,6 +1485,71 @@ h1, h2, h3, h4, h5, h6, h7 {
   border-radius: 50%;
   background-color: var(--col5);
 }
+.seccion .main .home .resultados_busqueda {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  overflow-y: scroll;
+  top: 100%;
+  width: 328px;
+  max-height: 200px;
+  z-index: 2;
+  background-color: var(--col5);
+  border-radius: 15px;
+}
+.seccion .main .home .resultados_busqueda .resultado {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  width: 100%;
+  padding: 6px 10px;
+  gap: 10px;
+  background-color: #EEEEEE;
+}
+.seccion .main .home .resultados_busqueda .resultado img {
+  width: 65px;
+  height: 65px;
+  border-radius: 10px;
+}
+.seccion .main .home .resultados_busqueda .resultado .resultado_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+.seccion .main .home .resultados_busqueda .resultado .resultado_info h4:nth-child(1) {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--col1);
+}
+.seccion .main .home .resultados_busqueda .resultado .resultado_info h4:nth-child(2) {
+  font-size: 14px;
+  color: #979797;
+}
 .seccion .main .home div.contenedor_input.center {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1558,7 +1639,7 @@ h1, h2, h3, h4, h5, h6, h7 {
   color: var(--col4);
 }
 .seccion .main .home .cont_home .contenedor_cards:nth-child(1) .titulo_cards {
-  margin-top: 25%;
+  margin-top: 35%;
 }
 .seccion .main .home .cont_home .contenedor_cards {
   display: -webkit-box;
@@ -1830,6 +1911,7 @@ h1, h2, h3, h4, h5, h6, h7 {
   gap: 10px;
 }
 .seccion .main .explorador .contenedor_filtro_avz .form_filter_avz .btn_m {
+  width: 100%;
   margin-bottom: 30px;
 }
 .seccion .main .explorador .filtro {
